# football-ai-analysis-engine

./: .env.example  .gitignore  CODEX_PHASE10_MINI.md  CODEX_PHASE12_MINI.md  COMMERCIALIZATION_PLAN.md  CONTRIBUTING.md  Dockerfile  EXTERNAL_TRIAL.md  PHASE20_FEEDBACK_FORM.md  PRODUCT_PLAN.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pitchmind-sidecar-aarch64-apple-darwin.spec  pyproject.toml
app/: __init__.py  auth.py  commercial.py  compliance.py  config.py  content_renderer.py  data_source_status.py  desktop_runtime.py  desktop_settings.py  engine_adapter.py  main.py  odds_health.py  prediction.py  report_service.py  resources.py  run_index.py  run_manager.py  runtime_doctor.py  schemas.py  setup_guide.py  skill_bridge.py  sporttery_service.py
data/: demo_matches.json
desktop/: INSTALL_BETA.md  README.md  package-lock.json  package.json  sidecar_main.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: DEVELOPMENT.md
scripts/: create_release_notes.py  doctor.sh  external_trial_smoke.py  healthcheck.sh  package_desktop_source.py  package_release.sh  setup.sh  smoke.sh  start.sh  write_checksums.py
tests/: test_app_smoke.py  test_auth.py  test_commercial.py  test_compliance.py  test_config.py  test_data_source_status.py  test_desktop_packaging.py  test_desktop_release_pipeline.py  test_desktop_runtime.py  test_desktop_settings.py  test_engine_adapter.py  test_multi_user_auth.py  test_odds_health.py  test_prediction.py  test_run_index.py  test_run_manager.py  (+4 more)
(+33 files in other folders)
