[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-ai-content-engine"
version = "0.1.0"
description = "Local MVP for a compliant World Cup AI simulation content engine."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.8,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
