[package]
name = "pitchmind-desktop"
version = "0.1.0"
description = "足球赛事 AI 推演引擎 desktop host"
authors = ["PitchMind"]
edition = "2021"
license = "Proprietary"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false }
